Ejercicios 1 a 3 -manejo de errores con mensajes explicitos -uso de workers para paralelizacion -modificacion de metodos para adaptarse al uso de workers -cambiaron algunas firmas de funcion para usar tipo Option -se creo el informe -carpeta media para graficos del informe -muchas dependencias mas en build.sbt para que funcione spark