@@ -10,10 +10,16 @@ fork := true
 
 ThisBuild / javaOptions ++= Seq(
   "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-  "--add-opens=java.base/java.nio=ALL-UNNAMED"
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-exports=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED"
 )
 
 libraryDependencies ++= Seq(
   "org.json4s" %% "json4s-jackson" % "3.7.0-M11",
-  "com.github.scopt" %% "scopt" % "4.1.0"
+  "com.github.scopt" %% "scopt" % "4.1.0",
+  "org.apache.spark" %% "spark-sql" % "3.4.0",
+  "org.apache.spark" %% "spark-core" % "3.4.0"
 )
